--- a/index.css
+++ b/index.css
@@ -2,32 +2,34 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border-radius: 1%;
+    border-radius: 5%;
   }
   
   body {
-    font-family: 'Gaegu', cursive;
+    font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
     color: #371d0d;
-    background-color: #ffd700;
+    background-color:grey;
+    font-weight: bolder;
   }
   
-  .header {
+  header {
     text-align: center;
   }
   
-  .topMonkey {
-    max-width: 15em;
+  .bridgeBanner {
+    max-height: 20em;
+    /* border-radius: 10px;
+    border: 1px black solid; */
   }
   
   .header li {
     display: inline-block;
-    margin: 1em;
     list-style: none;
-    font-size: 1.3em;
+    font-size: 2px;
   }
-  
-  .jungleBox {
+
+  .tryAgain {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,8 +37,8 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 3em;
-    background: url(images/background.jpg) fixed;
-    border: 0.1em #371d0d solid;
+    background-color: maroon;
+    border: 2px black dotted;
   }
   
   .startQuiz,
@@ -47,9 +49,9 @@
     justify-content: space-between;
     text-align: center;
     margin: auto;
-    padding: 1em;
-    border: 0.1em #371d0d solid;
-    background-color: #ffd700;
+    padding: 10%;
+    border: 2px black solid;
+    background-color:wheat;
   }
   
   label {
@@ -78,20 +80,20 @@
   .button {
     margin-left: auto;
     margin-right: auto;
-    height: 3em;
+    height: 25px;
     cursor: pointer;
-    font-family: 'Gaegu', cursive;
+    font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
-    border: 0.1em #07773e solid;
-    background-color: #07773e;
-    color: #ffffff;
+    border: 1px black solid;
+    background-color:navy;
+    color: goldenrod;
   }
   
   .button:hover,
   .button:active {
-    background-color: #371d0d;
-    color: #ffd700;
-    border: 0.1em #371d0d solid;
+    background-color:black;
+    color: red;
+    border: 1px black solid;
   }
   
   .final {
@@ -99,11 +101,11 @@
   }
   
   @media only screen and (min-width: 320px) {
-    .topMonkey {
+    .bridgeBanner {
       width: 45%;
     }
   
-    .jungleBox {
+    .tryAgain {
       width: 90%;
       height: 31em;
       margin-top: 1em;
@@ -145,7 +147,7 @@
   }
   
   @media only screen and (min-width: 550px) {
-    .jungleBox {
+    .bridgeBanner {
       width: 29.5em;
       height: 31.5em;
       padding-top: 2.6em;
@@ -181,7 +183,7 @@
       font-size: 1.3em;
     }
   
-    .jungleBox {
+    .tryAgain {
       width: 35em;
       height: 38em;
     }
