--- a/index.css
+++ b/index.css
@@ -1,212 +1,38 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border-radius: 5%;
-  }
-  
-  body {
-    font-family: 'Times New Roman', Times, serif;
-    text-transform: uppercase;
-    color: #371d0d;
-    background-color:grey;
-    font-weight: bolder;
-  }
-  
-  header {
-    text-align: center;
-  }
-  
-  .bridgeBanner {
-    max-height: 20em;
-    /* border-radius: 10px;
-    border: 1px black solid; */
-  }
-  
-  .header li {
-    display: inline-block;
-    list-style: none;
-    font-size: 2px;
-  }
+  font-family: 'Philosopher', sans-serif;
+}
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
 
-  .tryAgain {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 3em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-    background-color: maroon;
-    border: 2px black dotted;
-  }
-  
-  .startQuiz,
-  .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    margin: auto;
-    padding: 10%;
-    border: 2px black solid;
-    background-color:wheat;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 0.5em;
-    padding: 0.5em;
-    cursor: pointer;
-  }
-  
-  .images {
-    margin-bottom: 0.5em;
-    width: 90%;
-    max-width: 240px;
-  }
-  
-  h1,
-  h3,
-  legend {
-    margin-bottom: 0.5em;
-  }
-  
-  .answerOption {
-    margin-top: 0.5em;
-  }
-  
-  .button {
-    margin-left: auto;
-    margin-right: auto;
-    height: 25px;
-    cursor: pointer;
-    font-family: 'Times New Roman', Times, serif;
-    text-transform: uppercase;
-    border: 1px black solid;
-    background-color:navy;
-    color: goldenrod;
-  }
-  
-  .button:hover,
-  .button:active {
-    background-color:black;
-    color: red;
-    border: 1px black solid;
-  }
-  
-  .final {
-    display: block;
-  }
-  
-  @media only screen and (min-width: 320px) {
-    .bridgeBanner {
-      width: 45%;
-    }
-  
-    .tryAgain {
-      width: 90%;
-      height: 31em;
-      margin-top: 1em;
-      margin-bottom: 1em;
-      padding-top: 0.8em;
-      padding-bottom: 0.8em;
-    }
-  
-    .box {
-      width: 90%;
-      height: 90%;
-    }
-  
-    .images {
-      width: 85%;
-    }
-  
-    .button {
-      margin-top: 0.5em;
-      font-size: 1em;
-      width: 8em;
-      height: 2.5em;
-    }
-  
-    h1,
-    h3,
-    legend {
-      font-size: 1em;
-    }
-  
-    .header li {
-      font-size: 1em;
-    }
-  
-    .sizeMe {
-      font-size: 0.9em;
-      margin: 0.1em;
-    }
-  }
-  
-  @media only screen and (min-width: 550px) {
-    .bridgeBanner {
-      width: 29.5em;
-      height: 31.5em;
-      padding-top: 2.6em;
-      padding-bottom: 2.6em;
-    }
-  
-    .box {
-      width: 85%;
-      height: 98%;
-    }
-  
-    .button {
-      margin-top: 1em;
-      font-size: 1em;
-      width: 10em;
-      height: 2.5em;
-    }
-  
-    h1,
-    h3,
-    legend {
-      font-size: 1em;
-    }
-  
-    .sizeMe {
-      font-size: 0.9em;
-    }
-  }
-  
-  @media only screen and (min-width: 800px) {  
-    .header li {
-      margin: 1em;
-      font-size: 1.3em;
-    }
-  
-    .tryAgain {
-      width: 35em;
-      height: 38em;
-    }
-  
-    .box {
-      width: 85%;
-      height: 95%;
-    }
-  
-    h1,
-    h3,
-    legend {
-      font-size: 1.3em;
-    }
-  
-    .sizeMe {
-      font-size: 1em;
-    }
-  
-    .button {
-      margin-top: 1em;
-      margin-bottom: 1em;
-      width: 12em;
-      font-size: 1.2em;
-    }
-  }
+.container {
+  text-align: center;
+  padding: 6em;
+  /* display: inline-block; */
+  /* margin: auto; */
+}
+
+.content {
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  padding:10px;
+  border-radius: 15px;
+  border: 1px solid goldenrod;
+}
+
+heading {
+  color: #f1f1f1;
+  padding: 30px;
+}
+
+.quizScores ul {
+  list-style-type: none;
+  color: rgb(118, 189, 59);
+  display: none;
+}
