--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   font-family: 'Philosopher', sans-serif;
 }
 /* background video- DO NOT ADJUST */
@@ -10,41 +11,73 @@
   min-height: 100%;
   z-index: -1;
 }
-/* base rules for everything within  */
-.container {
+/* base rules for all html content */
+main, html {
+  margin: 0;
+  padding: 0;
+}
+main {
   text-align: center;
-  padding: 10%;
+  padding: 7%;
+  color: #ebe5c6;
   margin: auto;
 }
-
 .content {
   display: inline-block;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
   padding:2% 5%;
   border-radius: 15px;
   border: 1.5px solid goldenrod;
+  background: rgba(0, 0, 0, 0.5);
 }
-
-heading {
-  color: #f1f1f1;
-  padding: 3%;
-}
-
-.quizScores ul {
-  list-style-type: none;
-  color: rgb(118, 189, 59);
-  text-align: center;
+/* scores and ques number */
+.quizScores {
+  color: rgb(117, 161, 58);
+  margin: auto;
+  text-shadow:
+		-.5px -.5px 0 #b49e31,
+		.5px -.5px 0 #b49e31,
+		-.5px .5px 0 #b49e31,
+    .5px .5px 0 #b49e31;
   font-size: 22px;
 }
-
-.counter {
-  display: inline-block;
-  padding:.25%;
-  margin: .1% 2%;
+ul {
+  text-align: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  display: inline;
+  padding: 5px 40px;
+  margin: 0 5%;
+}
+li:hover {
+  color: #c9ad24; 
+}
+li .stats {
+  display: inline-block; 
+  font-weight: bold;
 }
 
+/* name of quiz style */
+h1 .title {
+  text-decoration: none;
+  color: #ebe5c6;
+  padding: 3%;
+}
+h1 .title:hover {
+  text-decoration: underline;
+  color: #e7dca2;
+}
+
+/* quick blurb at beginning of quiz */
+.startQuiz h1 {
+  font-size: 24px;
+}
+
+/* start button design */
 button {
+  text-decoration: none;
   margin: 3%;
   height: auto;
   font-size: 22px;
@@ -53,4 +86,18 @@ button {
   border: 1px solid goldenrod;
   border-radius:3px;
   padding: 1.7%;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:active {
+  background: rgb(139, 161, 58);
+  border: 1px solid rgb(31, 119, 39);
+}
+/* end button design */
+
+.quizPortion {
+  display:none;
 }
