--- a/index.css
+++ b/index.css
@@ -1,22 +1,27 @@
-.altBox { 
+ .y { 
+  display:none; 
+}
+ /* cannot use quizPortion tag, doesn't allow jquery to grab any of it to show*/
+.quizScores {
   display:none;
-}  /* cannot use quizPortion tag, doesn't allow jquery to grab any of it to show */
+}
 
  * {
   box-sizing: border-box;
   font-family: 'Philosopher', sans-serif;
 }
+
 /* background video- DO NOT ADJUST */
-.backVideo {
+/* .backVideo {
   position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
   z-index: -1; 
-}
+} */
 /* base rules for all html content */
-main, html {
+/* main, html {
   margin: 0;
   padding: 0;
 }
@@ -32,9 +37,9 @@ main {
   border-radius: 15px;
   border: 1.5px solid goldenrod;
   background: rgba(0, 0, 0, 0.5);
-}
+} */
 /* scores and ques number */
-.quizScores {
+/* .quizScores {
   color: rgb(117, 161, 58);
   margin: auto;
   text-shadow:
@@ -64,7 +69,7 @@ li .stats {
 }  */
 
 /* name of quiz style */
-h1 .title {
+/* h1 .title {
   text-decoration: none;
   color: #ebe5c6;
   padding: 3%;
@@ -72,15 +77,15 @@ h1 .title {
 h1 .title:hover {
   text-decoration: underline;
   color: #e7dca2;
-} */
+}  */
 
 /* quick blurb at beginning of quiz */
-.startQuiz h1 {
+/* .startQuiz h1 {
   font-size: 24px;
-} 
+}  */
 
 /* start button design */
-button {
+/* button {
   text-decoration: none;
   margin: 3%;
   height: auto;
@@ -90,8 +95,8 @@ button {
   border: 1px solid goldenrod;
   border-radius:3px;
   padding: 1.7%;
-}
-
+} */
+/* 
 button:focus {
   outline: none;
 }
@@ -99,5 +104,5 @@ button:focus {
 button:active {
   background: rgb(139, 161, 58);
   border: 1px solid rgb(31, 119, 39); 
-} 
-/* end button design */
+}  */
+/* end button design  */
